# Vigenere-Breaker

./: LICENSE.txt  README.md  pyproject.toml
Vigenere_Breaker/: __init__.py  brute_force_attack.py  dictionary_attack.py  frequency_analysis.py  index_of_coincidence.py  kasiski_examination.py  vigenere_cipher.py  vigenere_cipher_breaker.py
Vigenere_Breaker/static/: script.js  style.css
Vigenere_Breaker/static/data/frequency_analysis/: english_monogram_frequency.txt  english_tetragram_frequency.txt
Vigenere_Breaker/templates/: index.html
tests/: test_index_of_coincidence_unit.py  vigenere_cipher_breaker_scratch.py  vigenere_cipher_scratch.py
